--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-name: Brittany Chiang
-title: Brittany Chiang | Front End Software Engineer
+name: Idris Abdul-Lateef
+title: Idris Abdul-Lateef | Front End Software Engineer
 description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
-url: https://bchiang7.github.io/
+url: https://eedris.dev/
 baseurl: ''
-email: brittany.chiang@gmail.com
-cover: https://bchiang7.github.io/img/og.png
-logo: https://bchiang7.github.io/img/emojis/technologist.png
-resume: https://bchiang7.github.io/resume.pdf
+email: alabialade@gmail.com
+cover: https://eedris.dev/img/og.png
+logo: https://eedris.dev/img/emojis/technologist.png
+resume: https://eedris.dev/resume.pdf
 social:
   - title: email
-    url: mailto:brittany.chiang@gmail.com
+    url: mailto:alabialade@gmail.com
   - title: twitter
     url: https://twitter.com/eedrxs
   - title: instagram
