--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brittanychiang.com",
+  "name": "eedris.dev",
   "version": "0.0.0",
   "description": "Design-minded front-end software engineer focused on building beautiful interfaces and experiences",
   "repository": {
