--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ social:
   - title: linkedin
     url: https://www.linkedin.com/in/eedris
   - title: blog
-    url: http://blog.eedris.dev/
+    url: https://blog.eedris.dev/
   # - title: instagram
   #   url: https://instagram.com/eedrxs
 
