added Crowdr to experience

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 name: Idris Abdul-Lateef
-title: Idris Abdul-Lateef | Front End Software Engineer
+title: Idris Abdul-Lateef | Front-End Software Engineer
 description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
 url: https://eedris.dev/
 baseurl: ''
