--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,12 @@
+- company: Crowdr
+  url: https://oncrowdr.com
+  time: Mar 2023 - Present
+  position: Frontend Engineer
+
 - company: Technocrat IT
   url: https://www.linkedin.com/company/technocrat-it/mycompany/
   time: Mar 2023 - Present
-  position: Junior Web Developer
+  position: Web & Mobile Developer
 
 - company: Technocrat IT
   url: https://www.linkedin.com/company/technocrat-it/mycompany/
