updated attribution and work history

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
 
 - company: Technocrat IT
   url: https://www.linkedin.com/company/technocrat-it/mycompany/
-  time: Mar 2023 - Present
+  time: Mar 2023 - Oct 2023
   position: Web & Mobile Developer
 
 - company: Technocrat IT
