updated experience, featured projects

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
 
 - company: Technocrat IT
   url: https://www.linkedin.com/company/technocrat-it/mycompany/
-  time: Mar - Oct 2023
+  time: Mar - Present
   position: Web & Mobile Developer
 
 - company: Technocrat IT
