--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,5 +1,5 @@
 - company: Crowdr
-  url: https://oncrowdr.com
+  url: https://www.oncrowdr.com
   time: Mar 2023 - Present
   position: Frontend Engineer
 
